--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@
 		<button id="Enter" onclick="newNameTest()">Test name equality</button>
 		<span id="nameMatchResult">
 		<br>Do the names match?</span>
-
-
+		<br>
+		<br>
+		Choose a door: <br>
+		<button onclick="doorChooser(1)">Door 1</button>
+		<button onclick="doorChooser(2)">Door 2</button>
+		<button onclick="doorChooser(3)">Door 3</button>
+		<br> 
+		<span id="winnings"></span>
 
 
 
